2000-05-25  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwusr: New prototype of WWW interface for users.
	It currently supports the functionality of lists, faq,
	info, intro, show, set, subscribe, and unsubscribe.

2000-05-24  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwadm, bin/mj_confirm: Add error checks for return
	values from new() and connect().  Untaint domain name.
	(Thanks to Olivier Prenant)

	* bin/mj_wwwadm: Use PATH_INFO to allow a list name to be specified
	in the URL, e.g., http://example.com/cgi-bin/mj_wwwadm/mytestlist.
	Allow '=' to be used to separate command and mode.
	Add the set command to the command menu.
	Add "about this service" entry to the command menu, and supply
	usage instructions if it is utilized.  

	* lib/Mj/Access.pm: add mime_header_length_exceeded to consult_vars.

	* lib/Mj/CommandProps.pm:  change the bytes variable to body_length.
	Add the mime_header_length and mime_header_length_exceeded variables
	to the 'legal' hash for the post command.
 
	* lib/Mj/Resend.pm: set the mime_header_length, body_length,
	and body_length_exceeded variables appropriately.

2000-05-23  Michael Yount  <csf@moscow.com>

	* lib/Mj/Resend.pm (_check_body): Make use of maxlength
	variable to check message body size.

	* lib/Mj/Access.pm, lib/Mj/CommandProps.pm: Add new
	"body_length_exceeded" access variable.

2000-05-23  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Include bouncing users in
        subject of bounce detection report.

2000-05-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Bf/Parser.pm (parse_exim): Parse exim bounces.
	(parse): Call parse_exim.
	(parse_yahoo): Tweak parsing a bit.

2000-05-20  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Bf/Parser.pm (parse): Call parse_yahoo.
	(parse_yahoo): Parse bounces from yahoo.

2000-05-19  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Bump version numver.

2000-05-18  Jason L Tibbitts III  <tibbs@math.uh.edu>
