@@ -1,3 +1,12 @@
+2000-05-28  Michael Yount  <csf@moscow.com>
+	* lib/Majordomo.pm:
+	(get_all_lists)  Return a sorted list of lists.
+	(_password)  Allow $VICTIM to be substituted in new_password.
+	(_rekey) Skip registration records for which an Mj::Addr could not
+	    be created.
+	(_unregister) Allow regular expressions to be used with
+	    the unregister command.
+
 2000-05-25  Michael Yount  <csf@moscow.com>
 	* bin/mj_wwwusr: New prototype of WWW interface for users.
 	It currently supports the functionality of lists, faq,
